Next release
------------

- ...

0.1.3 (2010-12-02)
------------------

- Add classes and current step info to form wizard.

0.1.2 (2010-12-1)
------------------

- Another not-ready-for-primetime customer release: add ``get_summary()``
  method to form wizard.

0.1.1 (2010-11-30)
------------------

- Another not-ready-for-primetime customer release: refactor wizard state
  mutation and allow wizard states to be retrieved by name.
 
0.1 (2010-11-28)
----------------

- Not-ready-for-primetime release for customer (not uploaded to PyPI).

